S3用テンプレート追加（未完成）

--- a/env.tfvars.example
+++ b/env.tfvars.example
@@ -17,3 +17,11 @@ db_instance_type    = "t4g.micro"
 proxy_public_ip = true
 app_public_ip   = false
 db_public_ip    = false
+
+# プライベートサブネットのルートテーブルID
+private_route_table_ids = [
+  "rtb-aaaaaaaaaaaaaaaaa",
+  "rtb-bbbbbbbbbbbbbbbbb"
+]
+
+s3_backup_bucket_name = "バケット名"
